Eevee Texture Time Out Causes Freezing #63349

Closed
opened 2019-04-07 01:16:15 +02:00 by Ovionis · 12 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 54), branch: master, commit date: 2019-04-05 14:31, hash: d140e597a6
Worked: (optional)

Description of error
At seemingly random intervals, while running Eevee, Blender will completely freeze for several seconds, before resuming without any kind of acknowledgement of the freeze.
The interval is actually related to [Preferences >> System >> Memory & Limits] Texture Time Out and Garbage Collection Rate.

If you lower both of these to 1, if Eevee is running, Blender will freeze forever.
If you set them to around 5-10, the freezes will be frequent but you'll have a moment to stop something from in Blender.
If you set Texture Time Out to 0, this freeze stops.

It appears to be a hardware/performance thing though, because if I set the GL Texture Limit to 128, the freezes still occur at 1 & 1, just not forever (breaking Blender)

Instructions to reproduce
If you load this file and start Eevee, everything will run like normal.
However, if you drop the Texture Time Out and Garbage Collection Rate values, you should see the freezing problem.
_freezing_decimation.blend
This file contains a low-poly character with multiple materials and packed image textures.
The character is nude but they're so decimated, I don't think it matters.

I'm disabling Texture Time Out, to bypass this issue, since I don't think I care about what it does.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 54), branch: master, commit date: 2019-04-05 14:31, hash: `d140e597a6` Worked: (optional) **Description of error** At seemingly random intervals, while running Eevee, Blender will completely freeze for several seconds, before resuming without any kind of acknowledgement of the freeze. The interval is actually related to [Preferences >> System >> Memory & Limits] Texture Time Out and Garbage Collection Rate. If you lower both of these to 1, if Eevee is running, Blender will freeze forever. If you set them to around 5-10, the freezes will be frequent but you'll have a moment to stop something from in Blender. If you set Texture Time Out to 0, this freeze stops. It appears to be a hardware/performance thing though, because if I set the GL Texture Limit to 128, the freezes still occur at 1 & 1, just not forever *(breaking Blender)* **Instructions to reproduce** If you load this file and start Eevee, everything will run like normal. However, if you drop the Texture Time Out and Garbage Collection Rate values, you should see the freezing problem. [_freezing_decimation.blend](https://archive.blender.org/developer/F6915979/_freezing_decimation.blend) This file contains a low-poly character with multiple materials and packed image textures. The character is nude but they're so decimated, I don't think it matters. I'm disabling Texture Time Out, to bypass this issue, since I don't think I care about what it does.
Author

Added subscriber: @Phigon

Added subscriber: @Phigon

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sebastian Parborg self-assigned this 2019-04-07 21:32:21 +02:00

This is not really a bug. If you set the value too low then blender will freeze because it is constantly loading and unloading textures into memory.

This is not really a bug. If you set the value too low then blender will freeze because it is constantly loading and unloading textures into memory.
Author

The bug isn't that setting it low will break Blender.
The bug is that by default this is enabled, and Blender will randomly freeze without any notification of what's going on.

The bug isn't that setting it low will break Blender. The bug is that by default this is enabled, and Blender will randomly freeze without any notification of what's going on.

Added subscriber: @fclem

Added subscriber: @fclem

@fclem any thoughts?

@fclem any thoughts?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Sebastian Parborg removed their assignment 2019-04-09 11:15:39 +02:00
Clément Foucault was assigned by Sebastian Parborg 2019-04-09 11:15:39 +02:00

Added subscriber: @DanielPaul

Added subscriber: @DanielPaul

Same issue here, I get regular freezes in eevee and lookdev on win 10 and rc1.
This behavior is unchanged for round about 4 months now.
Set the timeout to 0 and the freezes are gone. :)

What does the timeout do exactly and is it necessary?

Same issue here, I get regular freezes in eevee and lookdev on win 10 and rc1. This behavior is unchanged for round about 4 months now. Set the timeout to 0 and the freezes are gone. :) What does the timeout do exactly and is it necessary?

This issue was referenced by daff18dd28

This issue was referenced by daff18dd286920c0636329c704c3758f90be0013

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63349
No description provided.