Fix T63349: image texture garbage collection causing freezes

Images were being freed often because the tagging for when the image was last
used was missing.

Differential Revision: https://developer.blender.org/D5252